--- a/src/index.scss
+++ b/src/index.scss
@@ -10,11 +10,15 @@ $third-color: #0593a2;
 $border-color: rgba(255, 255, 255, 0.186);
 
 $screen-size: 1000px;
-$font-size: 1.3rem;
+$font-size: 1.5rem;
 $box-radius: 10px;
 
-$font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 
+$font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+
+// $font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+// $font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 @mixin coloredFont {
 	background: linear-gradient(to right, red, $second-color);
 	background-clip: text;
@@ -29,12 +33,9 @@ $font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida San
 
 .main-body {
 	margin: 0;
-	// max-width: 100vw;
-	// width: 100vw;
 	width: 100%;
 	max-width: 100vw;
 	overflow: hidden;
-	// min-width: 320px;
 }
 
 :root {
@@ -43,9 +44,7 @@ $font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida San
 	margin: 0;
 	height: 100vh;
 	user-select: none;
-	// min-width: 320px;
 
-	// background: linear-gradient(60deg, black, #141414, #012e40);
 	background-color: $background-color;
 	background-attachment: fixed;
 	overflow-x: hidden;
