--- a/src/pages/navShared/scss/Sidebar.scss
+++ b/src/pages/navShared/scss/Sidebar.scss
@@ -96,11 +96,19 @@ header {
 			}
 		}
 
+		// .rainbow {
+		// 	position: absolute;
+		// 	width: 550px;
+		// 	bottom: 0;
+		// 	left: -140px;
+		// }
 		.rainbow {
 			position: absolute;
 			width: 550px;
 			bottom: 0;
 			left: -140px;
+
+			
 		}
 	}
 	@media (max-width: index.$screen-size) {
