--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -23,18 +23,16 @@
 		display: flex;
 		flex-direction: column;
 
-		// justify-content: center;
 		align-items: center;
 		text-decoration: none;
 		overflow: hidden;
-		
-		&:hover{
-			h3{
-				box-shadow: 0 0 10px index.$first-color;
+
+		&:hover {
+			h3 {
+				box-shadow: 0 0 10px index.$third-color;
 			}
-			
 		}
-		
+
 		.img-box {
 			box-sizing: border-box;
 			margin: 0 15px;
@@ -46,14 +44,14 @@
 			width: 100%;
 			overflow: hidden;
 			border-radius: 15px;
-			
+
 			img {
 				display: block;
 				justify-self: center;
 				height: 100%;
 			}
 		}
-		
+
 		.text-box {
 			margin-top: 15px;
 			display: flex;
@@ -61,19 +59,18 @@
 			flex-direction: column;
 			height: 35%;
 			gap: 15px;
-			
+
 			h3 {
 				color: index.$third-color;
 				box-sizing: border-box;
+				text-decoration: underline;
 				width: 250px;
 				padding: 5px 10px;
 				margin: 0;
 				text-align: center;
-				// overflow: hidden;
 				background-color: index.$background-color;
 				font-size: index.$font-size;
 				border: solid 1px rgba(255, 255, 255, 0.186);
-				// border-radius: 5px;
 			}
 
 			p {
@@ -83,12 +80,10 @@
 				font-size: index.$font-size;
 				border: 1px solid rgba(255, 255, 255, 0.186);
 				background-color: index.$background-color;
-				// border-radius: 5px;
 				text-align: center;
 				color: index.$text-color;
 				text-decoration: none;
 			}
-		
 		}
 	}
 }
