--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -47,7 +47,7 @@
 				@include index.coloredFont;
 
 				font-size: 3rem;
-				margin-bottom: 5px;
+				margin:5px 0;
 				opacity: 0;
 				transform: translateY(20px);
 				transition: all 0.5s ease-in;
