--- a/src/pages/navShared/scss/Sidebar.scss
+++ b/src/pages/navShared/scss/Sidebar.scss
@@ -13,22 +13,23 @@ header {
 		width: $sidebar-size;
 		max-width: 400px;
 		height: 100vh;
+		padding: 0;
 
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 
-		background-color: index.$background-color;
 		top: 0;
 		left: 0;
 		overflow: hidden;
 		z-index: 20;
 		border-right: index.$background-color-secondary solid 2px;
 		opacity: 0.95;
-
+		border-right: solid 1px index.$border-color;
+		
 		position: fixed;
-
 		background: linear-gradient(0deg, #0c1629, #0c1629, #010626);
+
 
 		button {
 			display: none;
@@ -36,20 +37,27 @@ header {
 		.nav-box {
 			display: flex;
 			flex-direction: column;
+		
 
 			z-index: 5;
 			.link {
+				box-sizing: border-box;
 				text-wrap: noWrap;
-				padding: 10px 25px;
+				padding: 10px 45px;
 				margin: 20px 0 0;
 				text-decoration: none;
 				font-size: 1.4rem;
 				color: index.$text-color;
 				z-index: 6;
 				border-radius: 5px;
-
+				
 				display: flex;
 				align-items: center;
+				
+				@media (max-width:1250px) {
+					padding: 10px 25px;
+					
+				}
 
 				.icon {
 					padding-right: 10px;
@@ -61,6 +69,7 @@ header {
 				}
 
 				&.active {
+					transition: color 1s;
 					color: index.$third-color;
 					border: index.$third-color 2px solid;
 				}
@@ -69,7 +78,7 @@ header {
 
 		.server-stat {
 			text-wrap: noWrap;
-			padding: 10px 25px;
+			padding: 10px 45px;
 			margin: 0 0 20px;
 			font-size: 1.4rem;
 			color: index.$text-color;
@@ -78,6 +87,11 @@ header {
 
 			display: flex;
 			align-items: center;
+
+			@media (max-width:1250px) {
+				padding: 10px 25px;
+				
+			}
 
 			.icon {
 				padding-right: 10px;
