--- a/src/pages/Home/About-First-Box.scss
+++ b/src/pages/Home/About-First-Box.scss
@@ -53,12 +53,9 @@
 
 				display: flex;
 				flex-direction: column;
-				// align-items: center;
-				// justify-content: center;
 				@include index.borderStyle;
 
 				.text-box {
-					// @include index.borderStyle;
 
 					overflow: hidden;
 					.t1 {
@@ -126,19 +123,21 @@
 				align-items: center;
 
 				position: relative;
+
+				background: radial-gradient( rgb(42, 57, 90), index.$background-color-secondary);
 				.me {
-					filter: drop-shadow(0 4px 30px rgb(0, 0, 0));
+					// filter: drop-shadow(0 4px 30px rgb(0, 0, 0));
 					width: 400px;
 					z-index: 5;
 				}
 
-				.me2 {
-					opacity: 0.4;
-					position: absolute;
-					top: 0px;
-					right: -100px;
-					width: 600px;
-				}
+				// .me2 {
+				// 	opacity: 0.4;
+				// 	position: absolute;
+				// 	top: 0px;
+				// 	right: -100px;
+				// 	width: 600px;
+				// }
 			}
 		}
 	}
