update display flex img projects

--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -45,8 +45,9 @@
 			overflow: hidden;
 			border-radius: 15px;
 
+			
 			img {
-				display: block;
+				display: flex;
 				justify-self: center;
 				height: 100%;
 			}
